--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,8 @@
 apply plugin: 'java'
 apply plugin: 'idea'
 
+sourceCompatibility = 1.8
+
 // In this section you declare where to find the dependencies of your project
 repositories {
     // Use 'jcenter' for resolving your dependencies.
@@ -71,7 +73,7 @@ task nodeJarTask(type: Jar) {
 
     manifest {
         attributes(
-                'Main-Class': 'ds3.NodMain',
+                'Main-Class': 'ds3.NodeMain',
                 'Class-Path': configurations.compile.collect { it.getName() }.join(' ')
         )
     }
@@ -101,8 +103,10 @@ artifacts {
 
 test {
     testLogging {
+        events = ['failed']
         showStandardStreams = true
         exceptionFormat = 'full'
+        showStackTraces = true
     }
 
     reports {
