--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ dependencies {
 
     compile 'com.googlecode.json-simple:json-simple:1.1.1'
     compile 'commons-io:commons-io:2.0.1'
+    compile 'com.intellij:forms_rt:7.0.3'
 }
 
 
