--- a/build.gradle
+++ b/build.gradle
@@ -55,24 +55,25 @@ apply plugin: 'edu.sc.seis.macAppBundle'
 apply plugin: 'edu.sc.seis.launch4j'
 
 macAppBundle {
-    mainClassName = 'ds3.NodeMain'
+    mainClassName = 'ds3.NodeMainGui'
     appName = 'SystemY Node'
     icon = 'res/icon.icns'
     bundleJRE = true
     javaProperties.put('apple.laf.useScreenMenuBar', 'true')
-    javaProperties.put('ds3.enableGui', 'true')
 }
 
 launch4j {
     outfile = 'SystemY Node.exe'
     productName = 'SystemY Node'
-    mainClassName = 'ds3.NodeMain'
+    mainClassName = 'ds3.NodeMainGui'
     icon = 'res/icon.ico'
 }
 
 junitPlatform {
     details 'tree'
 }
+
+createDmg.enabled = false;
 
 sourceSets {
     main {
