Remove icon to solve error in launch4j

--- a/build.gradle
+++ b/build.gradle
@@ -67,7 +67,7 @@ launch4j {
     outfile = 'SystemY Node.exe'
     productName = 'SystemY Node'
     mainClassName = 'ds3.NodeMainGui'
-    icon = 'res/icon.ico'
+    //icon = 'res/icon.ico'
 }
 
 junitPlatform {
